--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,27 @@
 sudo: required
 services:
   - docker
+env:
+  global:
+    - SHA=$(git rev-parse HEAD) #per prendere lo sha dall'ultimo commit di git
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1 #per evitare prompts che bloccano l'esecuzione
 before_install:
   - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null; #install cloud sdk
   - source $HOME/google-cloud-sdk/path.bash.inc 
   - gcloud components update kubectl #install kubectl
   - gcloud auth activate-service-account --key-file service-account.json #for IAM
+  - gcloud config set project multi-k8s-386508 #the real project name on google cloud(ID)
+  - gcloud config set compute/zone europe-central2
+  - gcloud container clusters get-credentials multi-cluster
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker build -t alecin/react-test -f ./client/Dockerfile.dev ./client
+
+script:
+  - docker run -e CI=true alecin/react-test npm test
+
+deploy:
+  provider: script #not elasticbeanstalk anymore
+  script: bash ./deploy.sh
+  on:
+    branch: master
